Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23660

QTcpServer::listen() fails if IPv6 not compiled into the linux kernel

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.0.0
    • 5.0.0
    • Network: Sockets
    • None
    • gentoo linux (or any linux where you create a custom kernel without IPv6)
    • 2c790b251d9e3a30abe8ac63ab50f81c9c7631ce

    Description

      We should fall back to IPv4 if QHostAddress::Any is used when IPv6 is disabled on the system.
      Currently QNativeSocketEnginePrivate::createNewSocket fails due to EPROTONOSUPPORT

      Affects people who built a kernel without IPv6 in order to save memory.
      Most binary distributions ship a kernel with IPv4 and IPv6 both enabled.

      Reject this issue if we don't want to support such kernels.

      Attachments

        For Gerrit Dashboard: QTBUG-23660
        # Subject Branch Project Status CR V

        Activity

          People

            gastal Jonas Mauricio Gastal
            shkearns Shane Kearns
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes