tests/auto/network/access/qnetworkreply/test/test.pro
@@ -8,7 +8,6 @@ contains(QT_CONFIG,xcb): CONFIG+=insignificant_test  # unstable, QTBUG-21102
 QT = core-private network-private testlib
 RESOURCES += ../qnetworkreply.qrc
 
-contains(QT_CONFIG,ipv6ifname): DEFINES += HAVE_IPV6
 TESTDATA += ../empty ../rfc3252.txt ../resource ../bigfile ../*.jpg ../certs \
             ../index.html ../smb-file.txt
 
